# neural_network_learning

./: .gitignore  000-first_jupyter_notebook.ipynb  001-building_micrograd.ipynb  001.building_micrograd.ipynb  002-building_micrograd_part2.ipynb  002.building_micrograd_part2.ipynb  003-summary_brief_of_micrograd.ipynb  004-practice_make_moons.ipynb  004-practice_make_moons.py  005-practice_make_circles.ipynb  005-practice_make_circles.py  006-practice_make_blobs.ipynb  006-practice_make_blobs.py  007-practice_gaussian_quantiles.ipynb  007-practice_gaussian_quantiles.py  008-practice_make_spirals.ipynb  008-practice_make_spirals.py  009-makemore.ipynb  README.md  pyproject.toml
